4935
Yep, that was the one.
```
ticket/t3943 /code/scala javac -d sandbox test/files/pos/t3943/Outer_1.java && RUNNER=scalac scala-hash edee27f59f1787^ -classpath sandbox test/files/pos/t3943/Client_2.scala
[info] downloading http://scala-webapps.epfl.ch/artifacts/1187c9896c097e6e591e5655b35f52c06b3c900a/pack.tgz ...done.
[info] scala revision from 2013-03-23 12:20:41 -0700 downloaded to /Users/jason/usr/scala-v2.11.0-M2-33-g1187c98
[info] edee27f59f => /Users/jason/usr/scala-v2.11.0-M2-33-g1187c98
test/files/pos/t3943/Client_2.scala:3: error: type mismatch;
 found   : String("meh")
 required: E
  x.getInner.foo("meh")
                 ^
one error found
ticket/t3943 /code/scala javac -d sandbox test/files/pos/t3943/Outer_1.java && RUNNER=scalac scala-hash edee27f59f1787 -classpath sandbox test/files/pos/t3943/Client_2.scala
[info] edee27f59f => /Users/jason/usr/scala-v2.11.0-M2-34-gedee27f
```

Test case: https://github.com/scala/scala/pull/2534
